# ek-transcript

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
cdk/lib/graphql/: schema.graphql
cdk/lib/graphql/resolvers/: analyzeRecording.js  connectGoogle.js  disconnectGoogle.js  getGoogleAuthUrl.js  getGoogleConnectionStatus.js  syncMeetRecordings.js
cdk/lib/lambdas/completion-handler/: index.ts
cdk/lib/lambdas/presigned-url/: index.ts
cdk/lib/lambdas/start-pipeline/: index.ts
cdk/lib/stacks/: appsync-stack.ts  google-meet-api-stack.ts  google-meet-lambda-stack.ts  google-meet-storage-stack.ts  index.ts  lambda-stack.ts  stepfunctions-stack.ts  storage-stack.ts
cdk/test/: appsync-stack.test.ts  google-meet-api-stack.test.ts  google-meet-lambda-stack.test.ts  google-meet-storage-stack.test.ts  presigned-url-lambda.test.ts  start-pipeline-lambda.test.ts  stepfunctions-recording-integration.test.ts
docs/google-meet-integration/: README.md  api-design.md  architecture.md  data-model.md  implementation-plan.md  requirements.md  security.md
frontend/: pnpm-lock.yaml
frontend/apps/web/: package.json
frontend/apps/web/app/: layout.tsx  page.module.css  page.tsx
frontend/apps/web/app/auth/google/callback/: page.tsx
frontend/apps/web/app/dashboard/: page.module.css  page.tsx
frontend/apps/web/app/interview/[id]/: page.module.css  page.tsx
frontend/apps/web/app/meetings/: page.module.css  page.tsx
frontend/apps/web/app/upload/: page.module.css  page.tsx
frontend/apps/web/components/: AnalysisViewer.module.css  GoogleConnectButton.tsx  TranscriptViewer.module.css
frontend/apps/web/lib/: amplify-config.ts  amplify-provider.tsx  auth-context.tsx  providers.tsx
frontend/apps/web/lib/graphql/: client.ts  index.ts  mutations.ts  queries.ts  types.ts
lambdas/aggregate_results/: Dockerfile  __init__.py  lambda_function.py
lambdas/aggregate_results/tests/: __init__.py  test_handler.py
lambdas/calendar_sync/: lambda_function.py
lambdas/chunk_audio/: Dockerfile  __init__.py  lambda_function.py
lambdas/chunk_audio/tests/: __init__.py  test_handler.py
lambdas/diarize/: Dockerfile  __init__.py  download_model.py  lambda_function.py  requirements.txt
lambdas/diarize/tests/: __init__.py  test_handler.py
lambdas/extract_audio/: Dockerfile  __init__.py  lambda_function.py  requirements.txt
lambdas/extract_audio/tests/: __init__.py  test_handler.py
lambdas/google_auth/: __init__.py  lambda_function.py  requirements.txt
lambdas/google_auth/tests/: __init__.py  test_lambda_function.py
lambdas/llm_analysis/: Dockerfile  __init__.py  lambda_function.py  models.py  requirements.txt  test_structured_output.py
lambdas/llm_analysis/tests/: __init__.py  test_dynamodb.py  test_handler.py
lambdas/meet_config/: __init__.py  lambda_function.py  requirements.txt
lambdas/meet_config/tests/: __init__.py  test_lambda_function.py
lambdas/shared/: google_token_manager.py  requirements.txt
lambdas/shared/tests/: __init__.py  test_google_token_manager.py
lambdas/split_by_speaker/: Dockerfile  __init__.py  lambda_function.py  requirements.txt
lambdas/split_by_speaker/tests/: __init__.py  test_handler.py
lambdas/transcribe/: Dockerfile  __init__.py  lambda_function.py  requirements.txt
lambdas/transcribe/tests/: __init__.py  test_handler.py
scripts/: deploy.sh  test_local.sh
tests/: conftest.py
tests/fixtures/: .gitkeep
